fix: Payment notification will accept InstallmentDTO + Refactor to handle authorization on tests